Fixed overflow issue

--- a/assets/common.scss
+++ b/assets/common.scss
@@ -91,6 +91,7 @@ button {
 
 #editor-section {
   position: relative;
+  overflow: scroll;
 }
 #editor {
   margin: 0;
