--- a/divDemo/style.css
+++ b/divDemo/style.css
@@ -87,6 +87,7 @@ button:active {
 
 #editor-section {
   position: relative;
+  overflow: scroll;
 }
 
 #editor {
